
/* LibSimpleDeadlines*/
"All" = "";

"Archive" = "";

/* No comment provided by engineer. */
"Choose a category to display" = "";

/* No comment provided by engineer. */
"Delete" = "";

/* No comment provided by engineer. */
"Done" = "";
