...
                                            </view>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="xD0-AD-gNR">
                                                <rect key="frame" x="55" y="0.5" width="288" height="64"/>
                                                <subviews>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YrW-L1-waA">
                                                        <rect key="frame" x="0.0" y="0.0" width="288" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" label="Task Title"/>
                                                        <nil key="textColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                        <connections>
                                                            <action selector="textFieldPrimaryActionTriggered:" destination="ien-A2-YrX" eventType="primaryActionTriggered" id="JDd-zH-hgt"/>
                                                        </connections>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Category" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qXz-j4-ehe" customClass="AutocompleteField" customModule="Simple_D
                                                        <rect key="frame" x="0.0" y="34" width="288" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" label="Task Category"/>
                                                        <nil key="textColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                        <connections>
                                                            <action selector="categoryPrimaryActionTriggered:" destination="ien-A2-YrX" eventType="primaryActionTriggered" id="qbg-ji-g69"/>
                                                        </connections>
...
                                    </datePicker>
                                </subviews>
                            </stackView>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HGn-cX-hlO">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                <items>
                                    <navigationItem title="Add Task" id="anc-0J-9GZ">
                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="h8p-mV-65m">
                                            <connections>
                                                <action selector="onCancelTapped:" destination="ien-A2-YrX" id="Dcu-M8-IDg"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="p4s-oQ-r9d">
...
